@date : 2023-12-22 @author : 김우렬 @version : 1.0.0:23122202 @comment  · 메인 페이지 좌측 상단 로고 클릭 시 리워드 페이지로 이동할 수 있도록 임시 조치

--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <ImageView
+                    android:id="@+id/main_logo"
                     android:layout_width="100dp"
                     android:layout_height="60dp"
                     android:src="@drawable/header_title"
