--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -46,16 +46,16 @@
 
             <ImageView
                 android:id="@+id/grade_img"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/grade_c"/>
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_alignParentEnd="true" />
 
             <TextView
                 android:id="@+id/greeting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
+                android:layout_marginTop="30dp"
                 android:textSize="20dp"
                 android:text="@string/greeting"/>
 
@@ -142,7 +142,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/btm_sheet_point"
                     android:textSize="40dp"
                     android:textColor="@color/black"/>
 
@@ -179,10 +178,8 @@
             <ImageView
                 android:id="@+id/progress_bar"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginHorizontal="30dp"
-                android:background="@drawable/progress_bar_club" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp" />
 
             <TextView
                 android:id="@+id/btm_sheet_info"
