--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".menu.splash.SplashActivity" >
+    tools:context=".rewards.menu.splash.SplashActivity" >
 
     <ImageView
         android:id="@+id/splash"
