--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="grade_v2">#993333</color>
     <color name="grade_v3">#D59631</color>
     <color name="grade_v4">#0D1B2D</color>
+    <color name="color_0D192C">#0D192C</color>
 </resources>
