--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/superView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:id="@+id/area01"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="0dp"
         android:background="@color/color_0D192C"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:ignore="MissingConstraints">
         <RelativeLayout
             android:id="@+id/header"
             android:layout_width="match_parent"
@@ -89,16 +91,19 @@
             </LinearLayout>
 
         </RelativeLayout>
-
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.53" />
 
     <TextView
         android:id="@+id/overlayView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/area01"
-        android:layout_marginBottom="-25dp"
-        android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="20dp"
         android:paddingVertical="10dp"
         android:text="@string/waist_title"
@@ -107,16 +112,29 @@
         android:textColor="@color/black"
         android:textSize="12dp"
         android:background="@drawable/background_border_59c4c8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
+        app:layout_constraintTop_toBottomOf="@+id/area01"
         tools:ignore="NotSibling" />
+    <!-- 중앙 오버레이 내용을 여기에 추가 -->
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.6" />
 
     <LinearLayout
         android:id="@+id/area02"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical">
-
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
+        app:layout_constraintBottom_toBottomOf="parent">
         <LinearLayout
+            android:id="@+id/menuArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -237,28 +255,32 @@
             android:clipToPadding="false"
             tools:ignore="RtlSymmetry" />
 
-        <RelativeLayout
-            android:id="@+id/footer"
-            android:layout_width="match_parent"
-            android:layout_height="75dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/recommend_sample"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_centerInParent="true"
-                android:fontFamily="@font/noto_sans_kr_regular"
-                android:text="@string/main_footer_msg"
-                android:textColor="@color/white"
-                android:textSize="13dp"
-                android:textStyle="bold"
-                tools:ignore="RelativeOverlap" />
-
-        </RelativeLayout>
     </LinearLayout>
-</RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/recommend_sample"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:text="@string/main_footer_msg"
+            android:textColor="@color/white"
+            android:textSize="13dp"
+            android:textStyle="bold"
+            tools:ignore="RelativeOverlap" />
+
+    </RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
