--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -27,9 +27,10 @@
                 android:layout_centerInParent="true"/>
 
             <TextView
+                android:id="@+id/dash_board"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/myPage"
+                android:text="@string/dashBoard"
                 android:textColor="@color/white"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:layout_centerVertical="true"
