@date : 2024-02-02 @author : 김우렬 @version : 1.0.0:24012401 @comment : 출시 전 오류 수정

--- a/app/src/main/res/layout/act_webview.xml
+++ b/app/src/main/res/layout/act_webview.xml
@@ -7,4 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <ImageButton
+        android:id="@+id/back_btn"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@color/zxing_transparent"
+        android:src="@drawable/baseline_arrow_back_ios_new_24"/>
+
 </RelativeLayout>
