--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -75,6 +75,7 @@
                     android:textStyle="bold" />
 
                 <Button
+                    android:id="@+id/main_popup"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_marginTop="10dp"
