--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="grade_v3">#D59631</color>
     <color name="grade_v4">#0D1B2D</color>
     <color name="color_0D192C">#0D192C</color>
+    <color name="color_F3F4F4">#F3F4F4</color>
+    <color name="color_171717">#171717</color>
 </resources>
