--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -25,10 +25,9 @@
 
                 <ImageView
                     android:id="@+id/main_logo"
-                    android:layout_width="100dp"
+                    android:layout_width="110dp"
                     android:layout_height="60dp"
                     android:layout_centerHorizontal="true"
-                    android:contentDescription="@string/todo"
                     android:src="@drawable/header_title" />
 
                 <TextView
@@ -238,6 +237,7 @@
                     android:contentDescription="@string/todo" />
 
                 <TextView
+                    android:id="@+id/tv_reservation_check"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/noto_sans_kr_regular"
