--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -21,10 +21,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_width="100dp"
+                android:layout_width="110dp"
                 android:layout_height="60dp"
-                android:src="@drawable/header_title"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                android:src="@drawable/header_title" />
 
             <TextView
                 android:id="@+id/dash_board"
