@date : 2024-03-12 @author : 김우렬 @version : 1.0.0:24031101 @comment · 로그인 유지 시 홈화면 예약확인 -> 마이페이지로 변경 · 하단의 footer 링크 변경

--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/color_0D192C"
+        android:background="@drawable/parnas_bg"
         android:orientation="vertical">
         <RelativeLayout
             android:id="@+id/header"
@@ -98,13 +98,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             android:orientation="vertical">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="@color/color_0D192C"
+                android:scaleType="fitXY"
+                android:src="@drawable/parnas_bg_under"
                 android:layout_weight="1"/>
 
             <LinearLayout
@@ -122,11 +123,13 @@
             android:layout_marginHorizontal="20dp"
             android:paddingVertical="10dp"
             android:text="@string/waist_title"
-            android:textAlignment="center"
+            android:gravity="center"
             android:fontFamily="@font/noto_sans_kr_regular"
             android:textColor="@color/black"
             android:textSize="13dp"
-            android:background="@drawable/background_border_59c4c8" />
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/background_border_59c4c8"
+            tools:ignore="SpUsage" />
 
     </FrameLayout>
 
@@ -229,6 +232,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
                 <ImageButton
+                    android:id="@+id/icon"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:scaleType="fitCenter"
